[#10683] Applied UUIDv7 as a random agentId