@@ -1,5 +1,6 @@
 package com.navercorp.pinpoint.collector.receiver.grpc;
 
+import com.navercorp.pinpoint.collector.service.AgentIdCompatService;
 import com.navercorp.pinpoint.grpc.Header;
 import com.navercorp.pinpoint.grpc.HeaderReader;
 import com.navercorp.pinpoint.grpc.server.AgentHeaderReader;
@@ -8,29 +9,34 @@ import io.grpc.ServerInterceptor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 public class HeaderServerInterceptorFactory {
+
     @Bean
-    public List<ServerInterceptor> agentInterceptorList() {
-        return newServerInterceptors("agent");
+    public AgentIdCompatInterceptor agentIdCompatInterceptor(AgentIdCompatService agentIdCompatService) {
+        return new AgentIdCompatInterceptor(agentIdCompatService);
     }
 
     @Bean
-    public List<ServerInterceptor> spanInterceptorList() {
-        return newServerInterceptors("span");
+    public List<ServerInterceptor> agentInterceptorList(AgentIdCompatInterceptor agentIdCompatInterceptor) {
+        return newServerInterceptors(agentIdCompatInterceptor, "agent");
     }
 
     @Bean
-    public List<ServerInterceptor> statInterceptorList() {
-        return newServerInterceptors("stat");
+    public List<ServerInterceptor> spanInterceptorList(AgentIdCompatInterceptor agentIdCompatInterceptor) {
+        return newServerInterceptors(agentIdCompatInterceptor, "span");
     }
 
-    private List<ServerInterceptor> newServerInterceptors(String name) {
+    @Bean
+    public List<ServerInterceptor> statInterceptorList(AgentIdCompatInterceptor agentIdCompatInterceptor) {
+        return newServerInterceptors(agentIdCompatInterceptor, "stat");
+    }
+
+    private List<ServerInterceptor> newServerInterceptors(AgentIdCompatInterceptor agentIdCompatInterceptor, String name) {
         HeaderReader<Header> headerReader = new AgentHeaderReader(name);
-        ServerInterceptor interceptor = new HeaderPropagationInterceptor(headerReader);
-        return Arrays.asList(interceptor);
+        ServerInterceptor headerPropagationInterceptor = new HeaderPropagationInterceptor(headerReader);
+        return List.of(agentIdCompatInterceptor, headerPropagationInterceptor);
     }
 }
